# uiowaATR

./: .env.example  .eslintrc.cjs  .gitignore  Dockerfile  README.md  docker-compose.yml  fly.toml  next.config.mjs  package-lock.json  package.json  tailwind.config.cjs
data/: README.md  at_resources.csv  at_resources.xlsx  atr_data.xlsx  base_template.xlsx
excelProccessor/: README.md
excelProccessor/import/: main.py
prisma/: schema.prisma  seed.ts
public/resource_logos/: amptify_logo.avif  cochlear_logo.avif
scripts/: README.md  pyproject.toml
scripts/import/: main.py
src/: env.mjs  middleware.ts
src/components/: Footer.tsx  Header.tsx  Labels.tsx  LoadingBarChart.tsx  LoadingWrapper.tsx  ResourcePhoto.tsx  ResourceTable.tsx  Search.tsx  Survey.tsx  notice.tsx
src/components/admin/: ControlBar.tsx  common.tsx
src/components/admin/resources/: form.tsx
src/components/forms/: inputLabel.tsx  selectors.tsx  textInput.tsx
src/layouts/: HeaderFooterLayout.tsx
src/lib/validation/: auth.ts
src/pages/: _app.tsx  about.tsx  contact.tsx  index.tsx
src/pages/admin/: login.tsx
src/pages/api/: healthcheck.ts
src/pages/api/resources/photo/: [id].tsx
src/pages/resources/: [id].tsx  create.tsx  index.tsx  print.tsx  search.tsx  survey.tsx
src/pages/resources/[id]/: edit.tsx  index.tsx
src/prices/: Icons.tsx
src/server/: auth.ts
src/server/api/: root.ts  trpc.ts
src/server/api/routers/: auditoryResources.ts
src/utils/: api.ts  enumWordLut.ts  parseSearchForm.ts  parseTRPCError.ts
