[tool.poetry]
name = "import"
version = "0.1.0"
description = ""
authors = ["Brandon Egger <brandonegger64@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.7.0"
pandas = "^1.5.3"
pymongo = "^4.3.3"
openpyxl = "^3.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
